tests/ui/fail/derive_debug/duplicate_derive_debug.stderr
error: encountered duplicate `#[derive(Debug)]` parameter
 --> tests/ui/fail/derive_debug/duplicate_derive_debug.rs:4:27
  |
4 | #[derive(Debug)] #[derive(Debug)]
  |                           ^^^^^

error: previous `#[derive(Debug)]` parameter here
 --> tests/ui/fail/derive_debug/duplicate_derive_debug.rs:4:10
  |
4 | #[derive(Debug)] #[derive(Debug)]
  |          ^^^^^
